src/assets/scss/paper-kit/_examples.scss
/* ... */
.landing-section{
    padding: 100px 0;
    z-index: 1;
}
.section-buttons{
    z-index: 1;
}
.landing-section .btn-simple{
    padding: 0;
}
.landing-section .column{
    padding: 0 75px 0 25px;
}
.team-player .img-circle, .team-player .img-thumbnail{
    display: block;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
    width: 120px;
}
.contact-form{
    margin-top: 30px;
}
.contact-form label{
    margin-top: 15px;
}
.contact-form .btn{
    margin-top: 30px;
}

.navbar-relative{
    position: relative;
    z-index: 2;
}
#register-navbar a{
    color: #FFF;
}
.register-background .container{
    margin-top: 11%;
    position: relative;
    z-index: 3;
}
.register-footer{
    bottom: 20px;
    position: absolute;
    z-index: 1;
    width: 100%;
    background: transparent;
    color: $white-color;
}
.register-footer .fa-heart{
    color: #EB5E28;
}

.register-card label{
    margin-top: 15px;
}
.register-card .title{
    color: #B33C12;
    text-align: center;
}
.register-card .btn{
    margin-top: 30px;
}
.register-card .forgot{
    text-align: center;
}

.profile-content{
    position: relative;
}
.owner{
    text-align: center;
}
.owner .avatar{
    padding: 15px;
    max-width: 180px;
    margin: -85px auto 0;
    display: inline-block;
}
.owner .name h4{
    margin-top: 10px;
}
.profile-tabs{
    margin: 50px 0;
    min-height: 300px;
}
#following h3{
    margin: 20px 0 40px 0;
}

#follows .follows .unfollow .checkbox{
    margin-top: -15px;
}
#follows .follows h6{
    margin-top: 15px;
}
.follows hr{
    margin-top: 10px;
}
.alert h5{
    // margin-bottom: 10px;
}
.title-brand{
    // max-width: 730px;
    margin: 0 auto;
    position: relative;
    text-align: center;
    color: #FFFFFF;
    display: block;

    .type{
        position: absolute;
        font-size: 20px;
        background: #132026;
        padding: 6px 10px;
        border-radius: 4px;
        top: 0;
        font-weight: 600;
        margin-top: 10px;
        right: -15px;
    }
}

.presentation-title{
    font-size: 7em;
    font-weight: 700;
    margin: 0;
    color: #FFFFFF;
    background: #fbf8ec;
    background: -moz-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
    background: -webkit-linear-gradient(top, #FFFFFF 35%,#4e6773 100%);
    background: -ms-linear-gradient(top, #FFFFFF 35%,#4e6773 100%);
    background: linear-gradient(to bottom, #FFFFFF 35%,#4e6773 100%);

    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.presentation-subtitle{
    font-size: 1.7em;
    color: #FFFFFF;
}

.category-absolute{
    position: absolute;
    text-align: center;
    top: 90vh;
    margin-top: -60px;
    padding: 0 15px;
    width: 100%;
    color: rgba(255, 255, 255, 0.5);

    .creative-tim-logo {
        max-width: 140px;
        top: -2px;
        left: 3px;
        position: relative;
    }
}

.fog-low{
    position: absolute;
    left: 0;
    bottom: 0;
    margin-left: -35%;
    margin-bottom: -50px;
    width: 110%;
    opacity: .85;

    img{
        width: 100%;
    }

    &.right{
        margin-left: 30%;
        opacity: 1;
    }
}
.page-header{
    .content-center{
        margin-top: 85px;
    }
}
.moving-clouds{
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    width: 250.625em;
    height: 43.75em;
    -webkit-animation: cloudLoop 80s linear infinite;
    animation: cloudLoop 80s linear infinite;
}

@keyframes cloudLoop{   0%{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
                        100%{-webkit-transform:translate3d(-50%,0,0);
                        transform:translate3d(-50%,0,0)}
                    }
.following{
    img{
        max-width: 70px;
    }
}


.profile-content{
    & .tab-content{
        & .tab-pane{
            min-height: 200px;
        }
        & #tweets, #connections, #media{
            height: 100%;
        }
    }
}

.darkgrey-bg {
    background-color: #4D4F56 !important;
}

.lightgrey-bg {
    background-color: #AFAEAA !important;
}

.blue-bg {
    background-color: #172a50 !important;
}

.blue-bg-btn {
    background-color: #172a50 !important;
    border: #172a50 !important;;
}

.lightgrey-bg *:not(.btn) {
    color: black;
}

.lightgrey-bg .navbar .nc-icon {
    color: white !important;
}

.darkgrey-bg * {
    color: white !important;
}

.heart {
    color: red !important;
}

ul.card-description {
    padding-inline-start: 16px !important;
    color: white !important;
}

.map-marker {
    color: #0AB6D5 !important;
}

.contact-row {
    justify-content: center;   
}

.contact-row .nc-icon {
    font-weight: 900;
    font-size: 16px;
}

.contact-row .detail {
    font-weight: 500;
}

.table td,
.table th {
    border: unset;
}

.table tr:nth-child(even) {
    background-color: #9D948B;
    color: white !important;
  }

.table .map-marker {
    width: 25px;
    height: 25px;
    object-fit: contain;
    margin-right: 15px;
}

// .payment-row {
//     background: #f5f5f5;
// }

.payment-row i {
    font-weight: 600;
    font-size: 14px;
}

.payment-row {
    font-weight: 400;
    font-size: 1.2em;
}

.plot-title {
    font-weight: 500;
    font-size: 1.5em;
    text-transform: uppercase;
    margin-top: 15px;
}

//maps styles

.gm-style-mtc div {
    background: black !important;
    color: white !important;
}

.gm-control-active,
.gm-fullscreen-control {
    background: black !important;
}

.tabs-container {
    display: flex;
    justify-content: space-between;
}

.tab {
    border: 2px solid black;
    background: transparent !important;
    color: black !important;
}

.tab-selected:focus,
.tab-selected:active {
    border: 2px solid #172a50 !important;
    background-color: #172a50 !important;
    color: white !important;
}

.left-logo {
    width: 270px;
    height: 53px;
}

.left-logo .logo {
    width: 100% !important;
    // height: 100%;
    object-fit: cover;
    // padding-top: 8px;
}
/* ... */

